Revert "Overflow issue"
This reverts commit 1669f1b3ccc4bb7546e66f3904053021c66d6e88.

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -122,15 +122,6 @@ section {
 
       &:last-child {
         margin-right: 2rem;
-
-        :after {
-          content: "";
-          display: block;
-          position: absolute;
-          right: -2rem;
-          width: 2rem;
-          height: 1px;
-        }
       }
 
       @include respond(desktop) {
@@ -217,15 +208,6 @@ section {
 
       &:last-child {
         margin-right: 2rem;
-
-        :after {
-          content: "";
-          display: block;
-          position: absolute;
-          right: -2rem;
-          width: 2rem;
-          height: 1px;
-        }
       }
 
       @include respond(desktop) {
